--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "init-db": "node scripts/runSQLScript.js"
   },
   "dependencies": {
+    "body-parser": "^2.2.0",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "joi": "^17.13.3",
     "pg": "^8.15.6"
   },
   "devDependencies": {
